# auto-mate

./: .gitignore  README.md  alembic.ini  compose.yaml  mosquitto.conf  plan.md  pyproject.toml
agent/: app.py  base.py  config.py  factory.py  tapo_agent.py  tuya_agent.py
alembic/: env.py
alembic/versions/: 613d12d45abc_.py  bcda4e19e475_init.py  c2f8a1b3d4e5_add_user_is_admin.py  d3e4f5a6b7c8_integration_nullable_credentials.py  e5f6a7b8c9d0_integration_secret_text_columns.py  efa5b6248e65_.py
auto_mate_server/: __init__.py  auth.py  config.py  crypto.py  events.py  factory.py  integration_validation.py  main.py  mqtt.py  mqtt_handler.py  routes.py  schemas.py  secret_key_loader.py
auto_mate_server/db/: __init__.py  encrypted_types.py  models.py  session.py
auto_mate_server/service/: rpc.py
common/: __init__.py  config.py  enums.py  mqtt.py
common/dto/: topics.py
common/dto/event/: base.py  integration.py
common/service/: mqtt.py
mosquitto-data/: passwordfile
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/ui/: button.tsx
ui/src/dashboard/: DashboardLayout.tsx  IntegrationsPage.tsx  PlaceholderPage.tsx  UsersPage.tsx
ui/src/lib/: api.ts
